--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <label for="filter-completed">Completed</label>
               </div>
             </div>
-            <button class="clear-completed-button"> Clear completed </button>
+            <button class="clear-completed-button"> Clear Completed </button>
           </div>
         </div>
       </div>
